# cs736-project

./: .gitignore  CMakeLists.txt  Justfile  README.md  flake.nix
code/: CMakeLists.txt  cache.hpp  main.cpp  trace.cpp  trace.hpp
code/lib/gcache/: ghost_kv_cache.h  hash.h
data/: fb_cache.csv  test
mrc/: mrc.txt
mrc-sample/: 5233
plot/: README.md  pyproject.toml
plot/src/plot/: __main__.py  json.py  miss_rate_curve.py  sample.py
plot/tests/: test_miss_rate_curve.py  test_sample.py
script/: cache.py  main.py
